# app-backend

./: .dockerignore  .env  Cargo.toml  Dockerfile  sqlx-data.json  start_db.sh  tracing.sh
.github/workflows/: docker_build_and_push.yml
migrations/: 20230110211615_setup.down.sql  20230110213030_user.down.sql  20230110213030_user.up.sql  20230111212323_session.down.sql  20230111212323_session.up.sql  20230112145932_quiz.down.sql  20230112145932_quiz.up.sql  20230112222216_challenge.down.sql  20230112222216_challenge.up.sql  20230202072941_unique_user_challenge.down.sql  20230202072941_unique_user_challenge.up.sql  20230202145637_title_for_challenge.down.sql  20230202145637_title_for_challenge.up.sql
src/: main.rs  security.rs
src/core/: challenge.rs  mod.rs  quiz.rs  user.rs
src/entities/: challenge.rs  mod.rs  quiz.rs
src/routes/: auth.rs  challenge.rs  mod.rs  quiz.rs
